Fixed hamburger menu z-index 1000

--- a/styles/meet_kids.css
+++ b/styles/meet_kids.css
@@ -2,7 +2,7 @@
 .flip-card {
     display: block;
     position: relative;
-    z-index: 1000;
+    z-index: 2;
     width: 100px;
     height: 100px;
   }
@@ -24,13 +24,13 @@
     -moz-transform: perspective(300) rotateY(0);
     -webkit-transform: perspective(300) rotateY(0);
     transform: perspective(300) rotateY(0);
-    z-index: 900;
+    z-index: 1;
   }
   .flip-card .card-back {
     -moz-transform: rotateY(-180deg);
     -webkit-transform: rotateY(-180deg);
     transform: rotateY(-180deg);
-    z-index: 800;
+    z-index: 0;
   }
   .flip-card:hover .card-front {
     -moz-transform: rotateY(180deg);
